--- a/WebSystem/WebSystem.csproj
+++ b/WebSystem/WebSystem.csproj
@@ -181,21 +181,18 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DataviewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ParameterController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Filters\UserFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DatabaseHelpers.cs" />
     <Compile Include="Helpers\DateviewHelper.cs" />
+    <Compile Include="Helpers\ExcelHelper.cs" />
     <Compile Include="Helpers\UserSecurityHelper.cs" />
-    <Compile Include="Helpers\UserTableHelper.cs" />
-    <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\DataViewModel.cs" />
     <Compile Include="Models\TableModel.cs" />
     <Compile Include="Models\UserTableModels.cs" />
