--- a/AuxWebSystem/Web.config
+++ b/AuxWebSystem/Web.config
@@ -5,6 +5,9 @@
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="SqlServerConnection" connectionString="Data Source=LENOVO-PC;Initial Catalog=AUX_GROUP_CO;Persist Security Info=True;User ID=guest;Password=123456"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
